Canvas centering, save-game scrollbars fix, prevent load game soft lock.

--- a/packages/landsofillusions-ui/components/savegame/savegame.styl
+++ b/packages/landsofillusions-ui/components/savegame/savegame.styl
@@ -22,6 +22,7 @@
             input-placeholder atariGray(2)
             appearance none
             resize none
+            white-space break-spaces
 
             &:focus
               outline none
